# turnero-rust

./: .gitignore  Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs
static/: estilos.css
templates/: 404.html  admin.html  formulario.html  layout.html  login.html  respuesta.html
